2008-04-07  Vincent Untz  <vuntz@gnome.org>

	* calendar-sources.c: fix compilation
	(calendar_sources_load_esource_list): complete fix for bug #378854.
	There was a case where the handler wasn't disconnected.

2008-04-07  Vincent Untz  <vuntz@gnome.org>

	* calendar-sources.c: (calendar_sources_finalize_source_data):
	disconnect the changed signal handler for esource_list. Might fix bug
	#488819.
	Also fix a small GSList leak.

2008-04-07  Vincent Untz  <vuntz@gnome.org>

	Don't show weather information of the last location once it has been
	removed. Fix bug #526300.
	Also fixes the empty space at the left of the clock when there's no
	location.

	* clock.c: (update_panel_weather): show the weather obox only if there
	is at least one location
	(locations_changed): show/hide weather obox if there's locations/no
	location
	(location_weather_updated_cb): add FIXME for later

2008-04-07  Vincent Untz  <vuntz@gnome.org>

	Don't lose weather code when editing a location and changing the
	timezone. Fix bug #522007

	* clock.c: (update_coords_helper): new, from code of update_coords
	(update_coords): updated to use update_coords_helper
	(zone_combo_changed): be a bit more clever and only update fields of
	the window if we have to guess them from the timezone
	(edit_tree_row): set weather-code on the window so that it's saved

2008-04-07  Vincent Untz  <vuntz@gnome.org>

	* clock-location-tile.c: (weather_info_setup_tooltip): strdup the
	various temperatures we get, since else we end up with the same
	string which makes it useless to compare the strings.
	Also display the non-rounded temperature.
	Fix bug #526171.

2008-04-07  Vincent Untz  <vuntz@gnome.org>

	Handle multiple locations in the same timezone in a better way.
	Patch by Matthias Clasen <mclasen@redhat.com>
	Fix bug #520212.
	Matthias had committed the clock.c part of this patch by accident in
	commit 10968 (when converting to GtkDialog).

	* clock-location-tile.[ch]: (clock_location_tile_class_init),