@@ -1,5 +1,12 @@
 2008-04-07  Vincent Untz  <vuntz@gnome.org>
 
+	* clock-location.c: (clock_location_is_current): emit the set-current
+	signal when changing the current location
+	* clock.c: (run_prefs_edit_save): set the new location as current if it
+	makes sense
+
+2008-04-07  Vincent Untz  <vuntz@gnome.org>
+
 	* calendar-sources.c: fix compilation
 	(calendar_sources_load_esource_list): complete fix for bug #378854.
 	There was a case where the handler wasn't disconnected.
